k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfa-ticket-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pfa-ticket-app
  template:
    metadata:
      labels:
        app: pfa-ticket-app
    spec:
      containers:
        - name: pfa-ticket-app
          image: hajarbenzakour/pfa-ticket-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
