k8s/nginx-gateway-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway-nodeport
  namespace: nginx-gateway
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
