k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pfa-ticket-app-service
  labels:
    app: pfa-ticket-app
spec:
  type: ClusterIP
  selector:
    app: pfa-ticket-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
