k8s/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pfa-ticket-route
spec:
  parentRefs:
    - name: pfa-ticket-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pfa-ticket-app-service
          port: 80
